un solo navegador

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en">git
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
@@ -20,35 +19,7 @@
     <link rel="stylesheet" href="./Styles/index.css">
     <title>Metrology Parts</title>
 </head>
-
 <body>
-    <header>
-        <div class="wrapper">
-            <nav class="nav">
-                <div class="nav-logo">
-                <a href="https://www.metrologyparts.mx" target="_blank">
-                <img class="logo" src="../img/LOGO-METROLOGY-OFICIAL.png" alt="Logo_metrology_parts"></a>
-                </div>
-                <div class="nav-menu">
-                    <ul>
-                        <li><a href="./index.html" class="link active">Inicio</a></li>
-                        <li><a href="./pages/Servicio.html"  class="link">Servicio</a></li>
-                        <li><a href="./pages/Calibraciones.html"  class="link">Calibraciones</a></li>
-                        <li><a href="./pages/Acreditacion.html"  class="link">Acreditacion</a></li>
-                        <li><a href="./pages/Productos.html"  class="link">Productos</a></li>
-                        <li><a href="./pages/Contacto.html"  class="link">Contacto</a></li>
-                    </ul>
-                </div>
-                <div class="nav-button">
-                    <button class="btn white-btn" id="Loginbtn">Sing In</button>
-                    <button class="btn" id="registerbtn">Sing Up</button></button>
-                </div>
-                <div class="nav-menu-btn">
-                <i class="bx bx-menu"></i>
-                </div>
-            </nav>
-        </div>
-    </header> 
     <header>
         <nav class="navegador">
             <div>
