--- a/pages/iniciar_sesion.html
+++ b/pages/iniciar_sesion.html
@@ -26,12 +26,12 @@
                 </div>
                 <div class="nav-menu">
                     <ul>
-                        <li><a href="./index.html" class="link active">Inicio</a></li>
-                        <li><a href="./pages/Servicio.html"  class="link">Servicio</a></li>
-                        <li><a href="./pages/Calibraciones.html"  class="link">Calibraciones</a></li>
-                        <li><a href="./pages/Acreditacion.html"  class="link">Acreditacion</a></li>
-                        <li><a href="./pages/Productos.html"  class="link">Productos</a></li>
-                        <li><a href="./pages/Contacto.html"  class="link">Contacto</a></li>
+                        <li><a href="../index.html" class="link active">Inicio</a></li>
+                        <li><a href="./Servicio.html"  class="link">Servicio</a></li>
+                        <li><a href="./Calibraciones.html"  class="link">Calibraciones</a></li>
+                        <li><a href="./Acreditacion.html"  class="link">Acreditacion</a></li>
+                        <li><a href="./Productos.html"  class="link">Productos</a></li>
+                        <li><a href="./Contacto.html"  class="link">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="nav-button">
