--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </ul>
                 </div>
                 <div class="button_nav">
-                    <button type="button" onclick="location.href='iniciar_sesion.html';">Log in </button>
+                    <button onclick= <a href="./pages/iniciar_sesion.html"></a>Login</button>
                 </div>
             </div>
         </nav>
@@ -119,7 +119,7 @@
             </h2>
         </div>
         <div>
-            <button class="button_style2" type="button" onclick="location.href='iniciar_sesion';">Cotiza ahora</button>
+            <button class="button_style2" type="button" onclick=<a href="./pages/iniciar_sesion.html"></a>Cotiza ahora</button>
         </div>
     </section>
     <footer>
