--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         content="Laboratorio de calibracion acreditado, especializado en las magnitudes Dimensional, Masa, Acustico, Electrico, Mecanico,">
     <link rel="icon" type="image/png" href="./img/favicon.png">
     
-    <link rel="stylesheet" href="./Styles/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Metrology Parts</title>
 </head>
 <body>
