--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto&display=swap" rel="stylesheet">
         <meta name="description" content="Laboratorio de calibracion acreditado, especializado en las magnitudes Dimensional, Masa, Acustico, Electrico, Mecanico,">
         <link rel="icon" type="image/png" href="../img/favicon.png">
-        <link rel="stylesheet" href="../Styles/index.css">
+        <link rel="stylesheet" href="../css/index.css">
         
         <title>Metrology Parts</title>
 </head>
