--- a/pages/iniciar_sesion.html
+++ b/pages/iniciar_sesion.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto&display=swap" rel="stylesheet">
     <meta name="description" content="Laboratorio de calibracion acreditado, especializado en las magnitudes Dimensional, Masa, Acustico, Electrico, Mecanico,">
     <link rel="icon" type="image/png" href="../img/favicon.png">
-    <link rel="stylesheet" href="../Styles/incio_sesion.css">
+    <link rel="stylesheet" href="../css/incio_sesion.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Metrology Parts\Log In</title>
 </head>
